--- a/views/login.html
+++ b/views/login.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Logg inn</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Welcome to Green Norway</h1>
-  <p>Select your login method:</p>
-  <a href="/auth/google">Login with Google</a><br>
-  <a href="/auth/linkedin">Login with LinkedIn</a><br>
-  <a href="/auth/azuread">Login with Microsoft</a><br>
+    <div class="login-container">
+        <div class="login-box">
+            
+            <div class="login-right">
+                <h3>Logg inn med din konto på:</h3>
+                <div class="oauth-buttons">
+                    <a href="/auth/google" class="oauth google">
+                        <i class="bi bi-google"></i> Google
+                    </a>
+                    <a href="/auth/azuread" class="oauth microsoft">
+                        <i class="bi bi-microsoft"></i> Microsoft
+                    </a>
+                    <a href="/auth/linkedin" class="oauth linkedin">
+                        <i class="bi bi-linkedin"></i> LinkedIn
+                    </a>
+                </div>
+                <p class="cookie-notice">Informasjonskapsler må være aktivert i nettleseren din</p>
+            </div>
+            <div class="login-left">
+              <img src="logo.png" alt="Maker Logo" class="logo">
+              <p class="signup-link">Har du noen spørsmål? <a href="https://greennorway.no">Kontakt oss</a></p>
+              
+          </div>
+        </div>
+    </div>
 </body>
 </html>
+
