--- a/views/login.html
+++ b/views/login.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
+  <div class = "login-body">
     <div class="login-container">
         <div class="login-box">
             
@@ -33,6 +34,7 @@
           </div>
         </div>
     </div>
+  </div>
 </body>
 </html>
 
