modified:   app.js 	new file:   config/accessID.js 	modified:   package-lock.json 	modified:   package.json 	deleted:    public/js/accessIDhandler.js 	modified:   public/js/filterHandler.js 	modified:   public/js/main.js 	modified:   public/js/powerbiEmbed.js 	deleted:    public/js/test.js 	modified:   routes/auth.js 	modified:   routes/index.js 	deleted:    src/accessIDhandler.js 	deleted:    src/filterHandler.js 	deleted:    src/main.js 	deleted:    src/powerbiEmbed.js 	modified:   views/dashboard.hbs 	modified:   views/layouts/main.hbs

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,3 +1,15 @@
 <!-- views/dashboard.hbs -->
 
 <div id="reportContainer" class="report-container"></div>
+<script>
+   // Parse the JSON string from the server-side into a JavaScript object
+    const projectAccessDetails = JSON.parse({{safe accessCode}});
+    
+    // Function to return project access details
+    function getProjectAccessDetails() {
+        return Array.isArray(projectAccessDetails) ? projectAccessDetails : [];
+    }
+
+
+    window.getProjectAccessDetails = getProjectAccessDetails;
+</script>
