--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -38,15 +38,16 @@
             <ul id="reportMenu" class="sidebar__menu">
                 <!-- Report menu items will be dynamically added here -->
             </ul>
+
             <div class="sidebar__filter">
-                <label for="projectFilterSelect" class="sidebar__filter-label">Select Projects</label>
+                <label for="projectFilterSelect" class="sidebar__filter-label">Prosjekt velger</label>
                 <select id="projectFilterSelect" class="sidebar__filter-select" multiple="multiple">
                     <!-- Project options will be dynamically added here -->
                 </select>
             </div>
             <div class="sidebar__contact">
                 <a class="sidebar__contact-link" href="https://www.greennorway.no/contact-1" target="_blank">
-                    <i class="fas fa-envelope"></i>Contact Us
+                    <i class="fas fa-envelope"></i>Kontakt oss
                 </a>
             </div>
         </aside>
@@ -56,10 +57,9 @@
     </div>
 
     <script src="/js/main.js"></script>
-    <script src="/js/accessIDHandler.js"></script>
     <script src="/js/powerbiEmbed.js"></script>
     <script src="/js/filterHandler.js"></script> 
-    {{!-- <script src="/js/pageNavigator.js"></script> --}}
+    
     
 </body>
 </html>
