--- a/public/styles.css
+++ b/public/styles.css
@@ -238,14 +238,16 @@ body {
     margin-top: 10px;
 }
 
-.sidebar__filter-label {
+.sidebar__filter-label,
+.filter-container label {
     margin-bottom: 5px;
     display: block;
     font-size: 14px;
     color: #3A5347;
 }
 
-.sidebar__filter-select {
+.sidebar__filter-select, 
+.filter-select {
     margin-bottom: 10px;
     padding: 10px 15px;
     border-radius: 5px;
@@ -258,12 +260,14 @@ body {
     transition: all 0.3s;
 }
 
-.sidebar__filter-select:hover {
+.sidebar__filter-select:hover, 
+.filter-select:hover {
     background-color: #3A5347;
     color: white;
 }
 
-.sidebar__filter-select:focus {
+.sidebar__filter-select:focus, 
+.filter-select:focus {
     outline: none;
     background-color: #3A5347;
     color: white;
@@ -341,3 +345,42 @@ body {
         display: none; /* Hide hamburger button on larger screens */
     }
 }
+
+
+/* .filter-container {
+    display: flex;
+    gap: 20px;
+    margin: 20px;
+}
+
+.filter-year, .filter-month {
+    display: flex;
+    flex-direction: column;
+} */
+
+/* .filter-select {
+    width: 200px;
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+} */
+
+
+
+.filter-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;  /* Adjust to align spacing */
+}
+
+/* .filter-year, .filter-month {
+    width: 100%;
+} */
+
+/* .filter-select {
+    width: 100%;
+    padding: 8px;
+    font-size: 14px;
+} */
