--- a/views/login.html
+++ b/views/login.html
@@ -6,6 +6,7 @@
     <title>Logg inn</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="icon" href="/favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class = "login-body">
