--- a/views/register.html
+++ b/views/register.html
@@ -6,6 +6,7 @@
     <title>Registrer deg</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="icon" href="/favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="login-container">
