--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -248,9 +248,18 @@
         </div>
     </div>
     <div class="layout">
-        <aside class="sidebar" id="sidebar">
-            <ul id="reportMenu" class="sidebar__menu">
+        <div class="sidebar" id="sidebar">
+            {{!-- <ul id="reportMenu" class="sidebar__menu">
                 <!-- Report menu items will be dynamically added here -->
+            </ul> --}}
+            <ul id="reportMenu" class="sidebar__menu">
+                {{#each reports}}
+                <li class="sidebar__menu-item">
+                    <a href="#" onclick="saveLastReportId('{{this.id}}'); embedReport('{{this.id}}', $('#projectFilterSelect').val())">
+                        <i class="{{this.icon}}"></i> {{this.name}}
+                    </a>
+                </li>
+                {{/each}}
             </ul>
 
             <div class="sidebar__filter">
@@ -270,7 +279,7 @@
                     <i class="fas fa-envelope"></i>Kontakt oss
                 </a>
             </div>
-        </aside>
+        </div>
         <main class="main-content">
             {{{body}}}
         </main>
